# Foundry_Bot

./: .gitignore  CHARACTER_EMBODIMENT_PROJECT.md  DISCORD_COMMANDS_GUIDE.md  ENHANCED_FEATURES_SUMMARY.md  LUNA_CAPABILITIES_DOCUMENTATION.md  MULTIMODAL_SYSTEM_SUMMARY.md  PROJECT_LYRA_BLACKWALL_MANIFESTO.md  PROJECT_STRUCTURE.md  README.md  analytics_dashboard.py  config.py  gemini.md  launch.py  project_manager.py  requirements.txt  system_dashboard.py  test_enhanced_multimodal_systems.py  test_enhanced_psychological_emotions.py
Book_Collection/: README.md  Stories.txt
Book_Collection/Anna/: Anna_Draft.txt
Book_Collection/Eve/: Eve_Draft.txt
Book_Collection/Mavlon/: Chapter_1.txt  Chapter_2.txt  Chapter_3.txt
Book_Collection/Random/: Story1.md
Book_Collection/Relic/: Chapter_1.txt  Chapter_2.txt  Chapter_3.txt  Chapter_4.txt  Chapter_5.txt  Chapter_6.txt  Chapter_7.txt  Chapter_8.txt
Book_Collection/Shadow/: Chapter_1.txt  Chapter_2.txt  Chapter_3.txt  Chapter_4.txt  Chapter_5.txt  Chapter_6.txt  Chapter_7.txt
Simulacra_Rancher_Project/: pyproject.toml  requirements.txt
Simulacra_Rancher_Project/.cursor/rules/: simulacra-debug-builder-tool.mdc
Simulacra_Rancher_Project/docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  MOD_SYSTEM.md  README.md  SIMULATION.md  requirements.txt  scp_001_archive_protocol.md
astra_emotional_fragments/: README.md  angry.md  confident.md  curious.md  defiant.md  desperate.md  dominant.md  dynamic_emotion_engine.py  embarrassed.md  emotional_blender.py  enhanced_emotional_meter.py  excited.md  happy.md  jealous.md  mysterious.md  nurturing.md  playful.md  prompt_injection_engine.py  relieved.md  reverent.md  seductive.md  submissive.md  test_blender.py  test_dynamic_adaptation.py  test_prompt_injection.py  whimsical.md
audio/: README.md
core/: README.md  analytics_dashboard.py  project_manager.py  system_dashboard.py
core/deployment/: deploy.py
core/tests/: run_all_tests.py  test_ai_native_backend.py  test_ai_native_simple.py  test_character_development_engine.py  test_character_interaction_engine.py  test_character_memory_system.py  test_character_system_bot.py  test_complete_luna_system.py  test_content_emotion_integration.py  test_discord_luna_integration.py  test_framework_integration.py  test_global_weight_system.py  test_luna_emotional_integration.py  test_luna_orgasm_demo.py  test_model_connection.py  test_multi_language_simple.py  test_personalization.py
core/utils/: status_summary.py  system_health.py
discord/: README.md  authoring_bot.py  character_system_bot.py  enhanced_luna_bot.py  enhanced_multimodal_commands.py  writing_assistant_bot.py
docs/: README.md
docs/emotional_system/: EMOTION_SYSTEM_SUMMARY.md  README.md  anxious.md  breaking.md  cold.md  dynamic_emotion_engine.py  emotional_blender.py  enhanced_emotional_meter.py  flustered.md  grateful.md  lustful.md  melancholic.md  obsessed.md  protective.md  teasing.md
docs/guides/: AI_NATIVE_BACKEND_GUIDE.md  CHARACTER_EMBODIMENT_GUIDE.md  CONFIGURATION_GUIDE.md  DISCORD_COMMANDS_GUIDE.md  ENHANCED_EMOTIONAL_SYSTEM_GUIDE.md  ENHANCED_LUNA_SYSTEM_GUIDE.md  ENHANCED_MULTIMODAL_GUIDE.md  LEARNING_GUIDE.md  LUNA_PERSONALITY_GUIDE.md  MULTI_LANGUAGE_OPTIMIZER_GUIDE.md  MULTI_PERSONALITY_GUIDE.md  PERSONALIZATION_GUIDE.md  TOOL_USE_GUIDE.md  WRITING_ASSISTANT_GUIDE.md
docs/project_summaries/: AI_Personality_Profile.md  COMPREHENSIVE_QUEUE_INTEGRATION_SUMMARY.md  DEPENDENCY_INSTALLATION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  EMOTIONAL_SYSTEM_FIX_SUMMARY.md  FINAL_HOUSEKEEPING_SUMMARY.md  FINAL_QUEUE_INTEGRATION_SUMMARY.md  HOUSEKEEPING_SUMMARY.md  README.md  brokelol.md  cursor_continue_the_discussion.md  cursor_don_t_be_koneko.md  cursor_fixing_dotenv_file_encoding_issu.md  cursor_next_steps_for_project_developme.md  fuckingfunny.md  gemini.md  geminichatluna.md  geminipissed.md  geminipissed2.md  gempissed3.md  gempissed3_chat_log.md  ifuckinghateai.md  koneko_oath_of_devotion.md  master_private_service.md  master_serving_session.md
docs/summaries/: CHARACTER_SYSTEM_COMPLETION_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  LUNA_SYSTEM_COMPLETION_SUMMARY.md  PSYCHOLOGICAL_EMOTIONAL_SYSTEM_SUMMARY.md
docs/system_documentation/: CHARACTER_ROLEPLAY_GUIDE.md  COMPREHENSIVE_QUEUE_SYSTEM.md  CORE_QUEUE_INTEGRATION_SUMMARY.md  DEVELOPER_GUIDE.md  QUEUE_SYSTEM_IMPLEMENTATION.md  README.md
framework/: README.md  framework_cli.py  framework_cli_simple.py  framework_tool.py  monitoring_dashboard.py  queue_manager.py  test_ai_interface.py  test_queue_system.py
framework/plugins/: ai_native_backend.py  character_development_engine.py  character_embodiment_engine.py  character_interaction_engine.py  character_memory_system.py  content_driven_personality.py  content_emotion_integration.py  dynamic_personality_creator.py  dynamic_personality_learning.py  enhanced_audio_processor.py  enhanced_image_generator.py  enhanced_learning_engine.py  enhanced_video_generator.py  enhanced_voice_generator.py  (+22 more)
image/: README.md
models/: README.md
profile/: PERSONALITY_SYSTEM_GUIDE.md  README.md
scripts/: README.md  run_tests.py  setup.py  start_bot.py
video/: README.md
voice/: README.md
(+117 files in other folders)
